--- a/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
+++ b/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
@@ -28,7 +28,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-WerAddExcludedApplication, WerFreeString, WerpGetAADTenantInfo, WerpSetAADTenantInfo, WerpSetExitListeners, WerpSetTtdStatus, WerRemoveExcludedApplication, WerReportAddDump, WerReportAddFile, WerReportCloseHandle, WerReportCreate, WerReportSetParameter, WerReportSetUIOption, WerReportSubmit, WerStoreClose, WerStoreGetFirstReportKey, WerStoreGetNextReportKey, WerStoreOpen, WerStoreQueryReportMetadataV2, WerStoreQueryReportMetadataV3
+WerAddExcludedApplication, WerFreeString, WerpCancelResponseDownload, WerpDownloadResponse, WerpDownloadResponseOnly, WerpDownloadResponseTemplate, WerpGetResponseUrl, WerpLaunchResponse, WerpUpdateReportResponse, WerRemoveExcludedApplication, WerReportAddDump, WerReportAddFile, WerReportCloseHandle, WerReportCreate, WerReportSetParameter, WerReportSetUIOption, WerReportSubmit, WerStoreClose, WerStoreGetFirstReportKey, WerStoreGetNextReportKey, WerStoreOpen, WerStoreQueryReportMetadataV2, WerSysprepSpecialize
 
 Structures
 HREPORT, HREPORTSTORE, WER_DUMP_CUSTOM_OPTIONS, WER_EXCEPTION_INFORMATION, WER_REPORT_INFORMATION, WER_REPORT_METADATA_V2, WER_REPORT_PARAMETER, WER_REPORT_SIGNATURE
