--- a/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
+++ b/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
@@ -28,7 +28,10 @@
     <PackageReleaseNotes>Currently implements:
 
 Functions
-AreThereVisibleLogoffScripts, AreThereVisibleShutdownScripts, CreateAppContainerProfile, CreateEnvironmentBlock, CreateProfile, DeleteAppContainerProfile, DeleteProfile, DeriveAppContainerSidFromAppContainerName, DeriveRestrictedAppContainerSidFromAppContainerSidAndRestrictedName, DestroyEnvironmentBlock, EnterCriticalPolicySection, ExpandEnvironmentStringsForUser, ForceSyncFgPolicy, FreeGPOList, GenerateGPNotification, GetAllUsersProfileDirectory, GetAppContainerFolderPath, GetAppContainerRegistryLocation, GetAppliedGPOList, GetDefaultUserProfileDirectory, GetGPOList, GetNextFgPolicyRefreshInfo, GetPreviousFgPolicyRefreshInfo, GetProfilesDirectory, GetProfileType, GetUserProfileDirectory, HasPolicyForegroundProcessingCompleted, LeaveCriticalPolicySection, LoadProfileExtender, LoadUserProfile, ProcessGroupPolicyCompleted, ProcessGroupPolicyCompletedEx, RefreshPolicy, RefreshPolicyEx, RegisterGPNotification, RsopAccessCheckByType, RsopFileAccessCheck, RsopLoggingEnabled, RsopResetPolicySettingStatus, RsopSetPolicySettingStatus, UnloadProfileExtender, UnloadUserProfile, UnregisterGPNotification, WaitForMachinePolicyForegroundProcessing, WaitForUserPolicyForegroundProcessing
+CreateAppContainerProfile, CreateEnvironmentBlock, CreateProfile, DeleteAppContainerProfile, DeleteProfileA, DeleteProfileW, DeriveAppContainerSidFromAppContainerName, DestroyEnvironmentBlock, EnterCriticalPolicySection, ExpandEnvironmentStringsForUserA, ExpandEnvironmentStringsForUserW, FreeGPOListA, FreeGPOListW, GetAllUsersProfileDirectoryA, GetAllUsersProfileDirectoryW, GetAppContainerFolderPath, GetAppContainerRegistryLocation, GetAppliedGPOListA, GetAppliedGPOListW, GetGPOListA, GetGPOListW, LeaveCriticalPolicySection
+
+Structures
+GROUP_POLICY_OBJECT
 
 </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -50,6 +53,7 @@ AreThereVisibleLogoffScripts, AreThereVisibleShutdownScripts, CreateAppContainer
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) "></ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
+    <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
