--- a/PInvoke/Opc/Vanara.PInvoke.Opc.csproj
+++ b/PInvoke/Opc/Vanara.PInvoke.Opc.csproj
@@ -7,7 +7,7 @@
     <Description>PInvoke API (methods, structures and constants) imported from opcservices.dll.</Description>
     <Copyright>Copyright © 2017-2019</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.1.7</VersionPrefix>
+    <VersionPrefix>3.1.8</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Opc</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -28,7 +28,7 @@
     <PackageReleaseNotes>Currently implements:
 
 Interfaces
-IOpcPartUri, IOpcUri
+IOpcCertificateEnumerator, IOpcCertificateSet, IOpcDigitalSignature, IOpcDigitalSignatureEnumerator, IOpcDigitalSignatureManager, IOpcFactory, IOpcPackage, IOpcPart, IOpcPartEnumerator, IOpcPartSet, IOpcPartUri, IOpcRelationship, IOpcRelationshipEnumerator, IOpcRelationshipSelector, IOpcRelationshipSelectorEnumerator, IOpcRelationshipSelectorSet, IOpcRelationshipSet, IOpcSignatureCustomObject, IOpcSignatureCustomObjectEnumerator, IOpcSignatureCustomObjectSet, IOpcSignaturePartReference, IOpcSignaturePartReferenceEnumerator, IOpcSignaturePartReferenceSet, IOpcSignatureReference, IOpcSignatureReferenceEnumerator, IOpcSignatureReferenceSet, IOpcSignatureRelationshipReference, IOpcSignatureRelationshipReferenceEnumerator, IOpcSignatureRelationshipReferenceSet, IOpcSigningOptions, IOpcUri
 
 </PackageReleaseNotes>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
