--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -45,12 +45,17 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\docs\icons\Vanara64x64.png" Pack="true" PackagePath="\" />
+    <None Include="Controls\ShellContextMenuStrip.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="_InProgress_\**\*" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Controls\ShellContextMenuStrip.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Controls\ExplorerBrowser.bmp" />
+    <None Remove="Controls\ShellNamespaceTreeControl.bmp" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System.Design" />
@@ -60,6 +65,7 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ShellNamespaceTreeControl.bmp" />
     <EmbeddedResource Include="Controls\ExplorerBrowser.bmp" />
     <EmbeddedResource Include="Extenders\GlassExtenderProvider.bmp" />
   </ItemGroup>
