--- a/Windows.Shell/Vanara.Windows.Shell.csproj
+++ b/Windows.Shell/Vanara.Windows.Shell.csproj
@@ -47,37 +47,18 @@ ChangeFilters, ExecutableType, FolderItemFilter, LibraryFolderFilter, LibraryVie
     <Compile Remove="_InProgress_\**\*" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
+    <Reference Include="System" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netcore')) ">
     <PackageReference Include="System.IO.FileSystem.AccessControl">
       <Version>4.6.0</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Remove="TaskBar\~AssocUtil.cs" />
-    <Compile Remove="TaskBar\~ImageIndexer.cs" />
-    <Compile Remove="TaskBar\~JumpList.cs" />
-    <Compile Remove="TaskBar\~TaskbarButton.cs" />
-    <Compile Remove="TaskBar\~TaskbarButtonThumbnail.cs" />
-    <Compile Remove="TaskBar\~TaskbarButtonThumbnails.cs" />
-    <Compile Remove="TaskBar\~ThumbnailToolbar.cs" />
-    <Compile Remove="TaskBar\~ThumbnailToolbarButton.cs" />
-    <Compile Remove="TaskBar\~ThumbnailToolbarButtonCollection.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="TaskBar\~AssocUtil.cs" />
-    <None Include="TaskBar\~ImageIndexer.cs" />
-    <None Include="TaskBar\~JumpList.cs" />
-    <None Include="TaskBar\~TaskbarButton.cs" />
-    <None Include="TaskBar\~TaskbarButtonThumbnail.cs" />
-    <None Include="TaskBar\~TaskbarButtonThumbnails.cs" />
-    <None Include="TaskBar\~ThumbnailToolbar.cs" />
-    <None Include="TaskBar\~ThumbnailToolbarButton.cs" />
-    <None Include="TaskBar\~ThumbnailToolbarButtonCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
