--- a/UnitTests/Windows.Forms.App/Windows.Forms.App.csproj
+++ b/UnitTests/Windows.Forms.App/Windows.Forms.App.csproj
@@ -81,6 +81,18 @@
       <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
       <Name>Vanara.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
+      <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
+      <Name>Vanara.PInvoke.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\Shell32\Vanara.PInvoke.Shell32.csproj">
+      <Project>{3226020f-4c9d-41b3-ac8a-2bc9fd064cd8}</Project>
+      <Name>Vanara.PInvoke.Shell32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\ShlwApi\Vanara.PInvoke.ShlwApi.csproj">
+      <Project>{30FD6779-6549-449E-880A-695815EB89B0}</Project>
+      <Name>Vanara.PInvoke.ShlwApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Windows.Forms\Vanara.Windows.Forms.csproj">
       <Project>{51986cd3-eeda-4369-93a4-255512548f68}</Project>
       <Name>Vanara.Windows.Forms</Name>
