--- a/UnitTests/PInvoke/Ws2_32/Ws2_32.csproj
+++ b/UnitTests/PInvoke/Ws2_32/Ws2_32.csproj
@@ -62,6 +62,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Winsock2Tests.cs" />
+    <Compile Include="WSATests.cs" />
     <Compile Include="Ws2tcpipTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
