--- a/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
+++ b/PInvoke/UserEnv/Vanara.PInvoke.UserEnv.csproj
@@ -7,7 +7,7 @@
     <Description>PInvoke API (methods, structures and constants) imported from UserEnv.dll.</Description>
     <Copyright>Copyright © 2017-2020</Copyright>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <VersionPrefix>3.2.2</VersionPrefix>
+    <VersionPrefix>3.2.3</VersionPrefix>
     <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.UserEnv</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
@@ -50,7 +50,8 @@ GROUP_POLICY_OBJECT, PROFILEINFO
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) "></ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) ">
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Security\Vanara.PInvoke.Security.csproj" />
