--- a/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
+++ b/PInvoke/Ole/Vanara.PInvoke.Ole.csproj
@@ -46,6 +46,7 @@ IInspectable, IMessageDispatcher, IActivationFilter, IAgileObject, IAgileReferen
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <NoWarn>0618</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\..\docs\icons\Vanara64x64.png" Pack="true" PackagePath="\" />
