--- a/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
+++ b/PInvoke/Shell32/Vanara.PInvoke.Shell32.csproj
@@ -46,6 +46,7 @@ IOleCommandTarget, IShellWindows, IObjectArray, IObjectCollection, DFConstraint,
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <NoWarn>0618;1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\..\docs\icons\Vanara64x64.png" Pack="true" PackagePath="\" />
