--- a/UnitTests/PInvoke/WcmApi/WcmApi.csproj
+++ b/UnitTests/PInvoke/WcmApi/WcmApi.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F8E02C7E-99E9-4C99-B63D-E678BC43C734}</ProjectGuid>
+    <ProjectGuid>{35B95D64-CC7E-48B4-B104-4886411531AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
-    <AssemblyName>UnitTest.PInvoke.WlanApi</AssemblyName>
+    <AssemblyName>UnitTest.PInvoke.WcmApi</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>latest</LangVersion>
@@ -39,8 +39,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WFDTests.cs" />
-    <Compile Include="WlanApiTests.cs" />
+    <Compile Include="WcmApiTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
@@ -50,6 +49,10 @@
     <ProjectReference Include="..\..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
       <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
       <Name>Vanara.PInvoke.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\WcmApi\Vanara.PInvoke.WcmApi.csproj">
+      <Project>{7508c4e0-d14b-45df-b644-9236b0b83607}</Project>
+      <Name>Vanara.PInvoke.WcmApi</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\PInvoke\WlanApi\Vanara.PInvoke.WlanApi.csproj">
       <Project>{141b6b19-6f07-4644-b72d-b189e49030bf}</Project>
