Added XML documentation

--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -42,6 +42,7 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <NoWarn>0618</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\docs\icons\Vanara64x64.png" Pack="true" PackagePath="\" />
