--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <SourceRoot Include="$(MSBuildThisFileDirectory)/"/>
   </ItemGroup>
   <!-- END: Source Link configuration. -->
   
