Updated project file information for 3.2.4 release

--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -25,6 +25,7 @@
       <dependency id="Vanara.PInvoke.ComCtl32" version="3.2.4" />
       <dependency id="Vanara.PInvoke.CredUI" version="3.2.4" />
       <dependency id="Vanara.PInvoke.Cryptography" version="3.2.4" />
+      <dependency id="Vanara.PInvoke.DnsApi" version="3.2.4" />
       <dependency id="Vanara.PInvoke.DwmApi" version="3.2.4" />
       <dependency id="Vanara.PInvoke.Gdi32" version="3.2.4" />
       <dependency id="Vanara.PInvoke.IpHlpApi" version="3.2.4" />
