Fixed unit test projects after intro of Directory.Build.Props

--- a/UnitTests/BITS/BITS.csproj
+++ b/UnitTests/BITS/BITS.csproj
@@ -32,6 +32,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
