--- a/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
+++ b/UnitTests/ExplorerBrowser/ExplorerBrowserDemo.csproj
@@ -57,6 +57,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="PresentationCore">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
