--- a/UnitTests/Windows.Forms/Windows.Forms.csproj
+++ b/UnitTests/Windows.Forms/Windows.Forms.csproj
@@ -32,6 +32,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
