--- a/UnitTests/PInvoke/CredUI/CredUI.csproj
+++ b/UnitTests/PInvoke/CredUI/CredUI.csproj
@@ -29,6 +29,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CredUITests.cs" />
