--- a/UnitTests/PInvoke/IpHlpApi/IpHlpApi.csproj
+++ b/UnitTests/PInvoke/IpHlpApi/IpHlpApi.csproj
@@ -31,6 +31,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IpHlpApiTests.cs" />
