--- a/UnitTests/PInvoke/WcmApi/WcmApi.csproj
+++ b/UnitTests/PInvoke/WcmApi/WcmApi.csproj
@@ -34,6 +34,7 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="WcmApiTests.cs" />
