--- a/UnitTests/PInvoke/WinINet/WinINet.csproj
+++ b/UnitTests/PInvoke/WinINet/WinINet.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
