--- a/UnitTests/PInvoke/Ws2_32/Ws2_32.csproj
+++ b/UnitTests/PInvoke/Ws2_32/Ws2_32.csproj
@@ -31,6 +31,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
