--- a/UnitTests/System/System.csproj
+++ b/UnitTests/System/System.csproj
@@ -32,6 +32,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComputerTests.cs" />
