--- a/PInvoke/Shared/Vanara.PInvoke.Shared.csproj
+++ b/PInvoke/Shared/Vanara.PInvoke.Shared.csproj
@@ -31,6 +31,11 @@ CharacterSet, CM_RESOURCE, CM_SHARE_DISPOSITION, CmResourceType, DMCOLLATE, DMCO
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
   </ItemGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) ">
+    <PackageReference Include="Theraot.Core">
+      <Version>3.1.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) ">
     <PackageReference Include="Microsoft.Win32.Registry">
       <Version>4.6.0</Version>
