--- a/PInvoke/CldApi/Vanara.PInvoke.CldApi.csproj
+++ b/PInvoke/CldApi/Vanara.PInvoke.CldApi.csproj
@@ -11,7 +11,15 @@
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;CldApi;Cloud Sync Engine;Cloud Filter</PackageTags>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+CfCloseHandle, CfConnectSyncRoot, CfConvertToPlaceholder, CfCreatePlaceholders, CfDehydratePlaceholder, CfDisconnectSyncRoot, CfExecute, CfGetCorrelationVector, CfGetPlaceholderInfo, CfGetPlaceholderRangeInfo, CfGetPlaceholderStateFromAttributeTag, CfGetPlaceholderStateFromFileInfo, CfGetPlaceholderStateFromFindData, CfGetPlatformInfo, CfGetSyncRootInfoByHandle, CfGetSyncRootInfoByPath, CfGetTransferKey, CfGetWin32HandleFromProtectedHandle, CfHydratePlaceholder, CfOpenFileWithOplock, CfQuerySyncProviderStatus, CfReferenceProtectedHandle, CfRegisterSyncRoot, CfReleaseProtectedHandle, CfReleaseTransferKey, CfReportProviderProgress, CfReportSyncStatus, CfRevertPlaceholder, CfSetCorrelationVector, CfSetInSyncState, CfSetPinState, CfUnregisterSyncRoot, CfUpdatePlaceholder, CfUpdateSyncProviderStatus
+
+Structures
+CF_CALLBACK_INFO, CF_CALLBACK_REGISTRATION, CF_CONNECTION_KEY, CF_FILE_RANGE_BUFFER, CF_FS_METADATA, CF_HYDRATION_POLICY, CF_OPERATION_INFO, CF_OPERATION_PARAMETERS, CF_FILE_RANGE, CF_PLACEHOLDER_BASIC_INFO, CF_PLACEHOLDER_CREATE_INFO, CF_PLACEHOLDER_STANDARD_INFO, CF_PLATFORM_INFO, CF_POPULATION_POLICY, CF_PROCESS_INFO, CF_REQUEST_KEY, CF_SYNC_POLICIES, CF_SYNC_REGISTRATION, CF_SYNC_ROOT_BASIC_INFO, CF_SYNC_ROOT_PROVIDER_INFO, CF_SYNC_ROOT_STANDARD_INFO, CF_SYNC_STATUS, CF_TRANSFER_KEY, HCFFILE, FETCHDATA, VALIDATEDATA, FETCHPLACEHOLDERS, OPENCOMPLETION, CLOSECOMPLETION, DEHYDRATE, DEHYDRATECOMPLETION, DELETE, DELETECOMPLETION, RENAME, RENAMECOMPLETION, TRANSFERDATA, RETRIEVEDATA, ACKDATA, RESTARTHYDRATION, TRANSFERPLACEHOLDERS, ACKDEHYDRATE, ACKRENAME, ACKDELETE, CANCELFETCHDATA
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
