Added System reference from .props and new ALLOWSPAN definition for framework versions that support Span<T>.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -2,4 +2,10 @@
   <PropertyGroup>
     <DocumentationFile>$(MSBuildProjectDirectory)\bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or '$(TargetFramework)' == 'net45' ">
+    <DefineConstants>$(DefineConstants);ALLOWSPAN</DefineConstants>
+  </PropertyGroup>
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
+    <Reference Include="System" />
+  </ItemGroup>
 </Project>
